displays viewer in correct position and behind other elements

--- a/assets/css/viewer.css
+++ b/assets/css/viewer.css
@@ -143,9 +143,11 @@
 		transition: opacity 0.75s ease, width 0.75s ease;
 		position: absolute;
 		top: 0;
-		width: calc(100% - 22.5em);
+		/*width: calc(100% - 22.5em);*/
+    width: 100%;
 		height: 100%;
 		left: 0;
+    z-index: -1;
 	}
 
 		#viewer .inner {
